Fix Vercel build hanging issues - Optimize Next.js config for Vercel deployment - Add webpack optimizations to prevent memory issues - Update vercel.json with better build configuration - Add .vercelignore to exclude unnecessary files - Disable Next.js telemetry to speed up builds

--- a/vercel.json
+++ b/vercel.json
@@ -3,8 +3,18 @@
   "framework": "nextjs",
   "regions": ["iad1"],
   "env": {
-    "NODE_ENV": "production"
+    "NODE_ENV": "production",
+    "NEXT_TELEMETRY_DISABLED": "1"
   },
+  "builds": [
+    {
+      "src": "package.json",
+      "use": "@vercel/node",
+      "config": {
+        "maxLambdaSize": "50mb"
+      }
+    }
+  ],
   "headers": [
     {
       "source": "/api/(.*)",
