--- a/vercel.json
+++ b/vercel.json
@@ -1,20 +1,11 @@
 {
-  "buildCommand": "npm run build",
   "framework": "nextjs",
   "regions": ["iad1"],
-  "env": {
-    "NODE_ENV": "production",
-    "NEXT_TELEMETRY_DISABLED": "1"
-  },
-  "builds": [
-    {
-      "src": "package.json",
-      "use": "@vercel/node",
-      "config": {
-        "maxLambdaSize": "50mb"
-      }
+  "functions": {
+    "src/app/api/**": {
+      "maxDuration": 30
     }
-  ],
+  },
   "headers": [
     {
       "source": "/api/(.*)",
