--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
   "author": "",
   "license": "ISC",
   "type": "commonjs",
+  "engines": {
+    "node": ">=18.17.0 <21.0.0"
+  },
   "dependencies": {
     "@google-cloud/local-auth": "^3.0.1",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
