--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,8 @@
 {
   "framework": "nextjs",
   "regions": ["iad1"],
+  "buildCommand": "npm run build",
+  "installCommand": "npm ci --prefer-offline --no-audit",
   "functions": {
     "src/app/api/**": {
       "maxDuration": 30
