--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "framework": "nextjs",
   "regions": ["iad1"],
-  "buildCommand": "npm run build",
+  "buildCommand": "NEXT_TELEMETRY_DISABLED=1 npm run build",
   "installCommand": "npm ci --prefer-offline --no-audit",
   "functions": {
     "src/app/api/**": {
