--- a/package.json
+++ b/package.json
@@ -23,12 +23,15 @@
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.50.0",
+    "@tailwindcss/postcss": "^4.1.10",
     "@types/node": "^24.0.3",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "autoprefixer": "^10.4.21",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "googleapis": "^150.0.1",
+    "lucide-react": "^0.516.0",
     "next": "^15.3.3",
     "openai": "^5.5.1",
     "postcss": "^8.5.6",
@@ -36,7 +39,6 @@
     "react-dom": "^19.1.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.10",
-    "@tailwindcss/postcss": "^4.1.10",
     "typescript": "^5.8.3",
     "zod": "^3.25.67"
   },
