--- a/package.json
+++ b/package.json
@@ -55,9 +55,7 @@
     "zod": "^3.25.67"
   },
   "devDependencies": {
-
     "eslint": "^9.29.0",
-    "eslint-config-next": "^15.3.3",
-    "tw-animate-css": "^1.3.4"
+    "eslint-config-next": "^15.3.3"
   }
 }
