feat: Add automation features and enhance email processing - Introduced new automation routes for daily processes and webhooks in vercel.json. Updated dashboard to include task management and AI analysis options. Enhanced email processing to support AI analysis and improved task creation from email suggestions.

--- a/vercel.json
+++ b/vercel.json
@@ -69,6 +69,18 @@
     },
     "src/app/api/calendar/sync/route.ts": {
       "maxDuration": 45
+    },
+    "src/app/api/automation/daily-process/route.ts": {
+      "maxDuration": 300
+    },
+    "src/app/api/automation/webhook/route.ts": {
+      "maxDuration": 60
     }
-  }
+  },
+  "crons": [
+    {
+      "path": "/api/automation/daily-process",
+      "schedule": "0 9 * * *"
+    }
+  ]
 }
