feat: Add debugging logs to EmailViewer and ModernEmailInterface components
- Introduced console logs to track props in EmailViewer and API responses in ModernEmailInterface for improved debugging.
- Enhanced email transformation checks and logging to ensure clarity on data processing.
- Logged email click events to facilitate better tracking of user interactions.

--- a/.gitignore
+++ b/.gitignore
@@ -27,7 +27,16 @@ node_modules/
 *.njsproj
 *.sln
 *.sw?
+*.cursor
+*.roo
+*.taskmaster
+
+
 
 # OS specific
 .DS_Store
 .vercel
+
+#MCPs
+mcp.json
+
